--- a/src/components/DeleteOrderline.css
+++ b/src/components/DeleteOrderline.css
@@ -1,31 +1,33 @@
-.delete-button {
-    background-color: var(--color-1);
+.delete-orderline-button {
+    background-color: transparent;
     margin: 10px;
     font-family: "Logo", sans-serif;
-    color: #fafafa;
+    color: var(--color-1);
     float: right;
     border-radius: 100%;
     width: 70px;
     height: 65px;
+    border: transparent;
 }
 
-.delete-button:hover {
-    background-color: var(--color-2);
+.delete-orderline-button:hover {
+    color: var(--color-2);
+    background-color: transparent;
     border: none;
     transform: scale(1.3);
 }
 
-#trash-icon {
-    color: white;
+#orderline-trash-icon {
+    color: var(--color-1);
     font-size: 30px;
 }
 
-#trash-icon:hover {
-    color: white;
+#orderline-trash-icon:hover {
+    color: var(--color-2);
     font-size: 30px;
 }
 
-#delete-tooltip .MuiTooltip-tooltip {
+#delete-orderline-tooltip .MuiTooltip-tooltip {
     font-size: 18px;
 }
 
