--- a/src/components/EditOrderline.css
+++ b/src/components/EditOrderline.css
@@ -13,47 +13,17 @@
     src: url("/src/fonts/mystical.TTF") format("truetype");
 }
 
-.edit-review-container {
-    height: 50%;
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #dddfe2;
-    border-radius: 8px;
-    background-color: #fff;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
-}
 
-.edit-review-title {
-    font-family: 'Slogan';
-    font-size: 30px;
-    margin-bottom: 20px;
-    color: var(--color-2);
-    text-align: center;
-}
-
-.form-group {
-    margin-top: 1%;
-    margin-left: 3%;
-}
-
-.form-group label {
-    font-family: 'Logo';
-    font-size: 20px;
-    margin-bottom: 20px;
-    color: var(--color-1);
-}
-
-.form-group input {
+.quantity-orderline-input {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fafafa;
     color: black;
-    width: 10rem;
+    width: 5rem;
     margin-left: 1%;
+    float: left;
+    margin-left: 50%;
 }
 
 .review-stars {
@@ -61,94 +31,39 @@
     font-size: 25px;
 }
 
-.form-group textarea {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fafafa;
-    color: black;
-    width: auto;
-    margin-left: 1%;
-    font-family: Arial;
-}
-
-#comment {
-    width: 60%;
-    min-height: 120px;
-    font-size: 1.25rem;
-}
-
-.edit-review-button {
+.update-orderline-button {
     background-color: var(--color-1);
     margin: 10px;
     font-family: "Logo", sans-serif;
     color: #fafafa;
-    float: right;
+    float: left;
+    margin-left: 50%;
     border-radius: 100%;
     width: 70px;
     height: 65px;
 }
 
-.edit-review-button:hover {
+.update-orderline-button:hover {
     background-color: var(--color-2);
     border: none;
     transform: scale(1.3);
 }
 
-#edit-review-icon {
+#update-orderline-icon {
     color: white;
     font-size: 30px;
 }
 
-#edit-review-icon:hover {
+#update-orderline-icon:hover {
     color: white;
     font-size: 30px;
 }
 
-#edit-review-tooltip .MuiTooltip-tooltip {
+#update-orderline-tooltip .MuiTooltip-tooltip {
     font-size: 18px;
 }
 
-.error-message-review {
-    font-family: Arial;
-    color: var(--color-3);
-    text-align: center;
-    font-size: 20px;
-}
-
-.delete-review-button {
-    background-color: var(--color-1);
-    margin: 10px;
-    font-family: "Logo", sans-serif;
-    color: #fafafa;
-    float: right;
-    border-radius: 100%;
-    width: 70px;
-    height: 65px;
-}
-
-.delete-review-button:hover {
-    background-color: var(--color-2);
-    border: none;
-    transform: scale(1.3);
-}
-
-#delete-review-icon {
-    color: white;
-    font-size: 30px;
-}
-
-#delete-review-icon:hover {
-    color: white;
-    font-size: 30px;
-}
-
-#delete-review-tooltip .MuiTooltip-tooltip {
-    font-size: 18px;
-}
-
-.delete-edit-buttons-container {
+.set-quantity-container{
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
 }
