--- a/src/components/EditOrderline.css
+++ b/src/components/EditOrderline.css
@@ -67,3 +67,21 @@
     display: flex;
     align-items: center;
 }
+
+.add-basket-button {
+    background-color: transparent;
+    color: white;
+    font-weight: bold;
+    margin-right: 20px;
+}
+
+.add-basket-button:hover {
+    background-color:transparent;
+    border: none;
+    transform: scale(1.2);
+}
+
+#add-basket-icon {
+    font-size: 40px;
+    color: var(--color-2);
+}
