--- a/src/components/Pay.css
+++ b/src/components/Pay.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    height: 40rem;
+    height: 42rem;
     width: auto;
     margin: 10px;
     padding: 10px;
@@ -18,7 +18,7 @@
 }
 
 .payment-heading {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     margin-bottom: 15px;
     font-family: 'Lucida';
     font-weight: bolder;
@@ -123,4 +123,15 @@
     border-left: 3px solid #dddfe2;
     height: 90%;
     margin-top: 1.5%;
+}
+
+.balam-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.balam {
+    width: 30%;
+    margin-top: 7%;
 }
