--- a/src/components/DeleteProductImage.css
+++ b/src/components/DeleteProductImage.css
@@ -1,5 +1,5 @@
 .delete-productimage-button {
-    background-color: transparent;
+    background-color: rgb(122, 120, 120, 0.2);
     margin: 10px;
     font-family: "Logo", sans-serif;
     color: var(--color-1);
@@ -8,12 +8,11 @@
     width: 70px;
     height: 65px;
     border: transparent;
-    margin-right: 30%;
+    margin-right: 40%;
 }
 
 .delete-productimage-button:hover {
     color: var(--color-2);
-    background-color: transparent;
     border: none;
     transform: scale(1.3);
 }
@@ -24,7 +23,7 @@
 }
 
 #productimage-trash-icon:hover {
-    color: var(--color-2);
+    color: var(--color-3);
     font-size: 30px;
 }
 
@@ -37,6 +36,8 @@
     font-family: Arial;
     font-weight: bold;
     color: var(--color-3);
+    margin-right: 39%;
+    text-align: center;
 }
 
 .delete-productimage-yes-no-container {
