--- a/src/components/UserProfile/UserProfile.css
+++ b/src/components/UserProfile/UserProfile.css
@@ -36,7 +36,6 @@ body {
 }
 
 
-
 .profile_button:hover {
   border: var(--color-3) 2px solid;
     background-color: #724FC3;
@@ -245,6 +244,14 @@ color: black;
   border-radius: 10px;
 }
 
+
+.modal-input input {
+  border: none;
+  background-color: #fff;
+  
+}
+
+
 .close {
   color: var(--color-1);
   position: absolute;
@@ -261,7 +268,21 @@ color: black;
   text-decoration: none;
 }
 
+
 /* Groups component */
+
+.group-search{
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.group-search:hover{
+  border: #352473;
+}
+
 .groups {
   background-color: white;
   border: 1px solid #dddfe2; /* Border color */
@@ -331,6 +352,27 @@ color: black;
   color:var(--color-1);
   border: none;
 }
+
+#person-join {
+  color: var(--color-3);
+  font-size: 30px;
+}
+
+#create-group-post{
+  color: var(--color-3);
+  font-size: 30px;
+}
+
+#group-create-btn{
+  color: var(--color-1);
+  border-radius: 20px;
+  border-color:var(--color-2)
+}
+
+#group-create-btn:hover {
+  background-color: rgb(207, 182, 248);
+}
+
 
 /* Extra styling for friend list */
 .friend {
@@ -433,6 +475,12 @@ color: black;
 
 .modal-actions button {
   margin-left: 10px;
+  color: #352473;
+  background-color: transparent;
+  border: transparent;
+}
+.modal-actions button:hover{
+  background-color: #724fc3;
 }
 
 .unfriend{
