--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -71,7 +71,7 @@ input:focus{
 
  .kart-button {
     background-color: var(--color-1);
-    margin: 10px;
+    margin-right: 15px;
     font-family: "Logo", sans-serif;
     color: #fafafa;
     float: right;
@@ -97,5 +97,36 @@ input:focus{
   }
 
 #kart-tooltip .MuiTooltip-tooltip {
+    font-size: 18px;
+  }
+
+.shop-button {
+    background-color: var(--color-1);
+    margin-right: 10px;
+    font-family: "Logo", sans-serif;
+    color: #fafafa;
+    float: right;
+    border-radius: 100%;
+    width: 70px;
+    height: 65px;
+}
+
+.shop-button:hover {
+    background-color: var(--color-2);
+    border: none;
+    transform: scale(1.3);
+}
+
+#shop-icon {
+    color: white;
+    font-size: 30px;
+  }
+
+#shop-icon:hover {
+    color: white;
+    font-size: 30px;
+  }
+
+#shop-tooltip .MuiTooltip-tooltip {
     font-size: 18px;
   }
